--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,9 @@ body {
   .navbar {
     display: flex;
     text-decoration: none;
-    border-style: groove;
+    border:solid 2px black;
     margin-top: 20px;
+    margin-right:3opx ;
   }
   
   nav ul {
@@ -77,7 +78,7 @@ body {
  }
  .image{
     border: solid 2px black;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-right: 20px;
     width: 50px;
  }
