--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ body {
   text-decoration: none;
   border: solid 2px black;
   padding: 14px 0;
-  margin-top: 20px;
-  margin-right: 3opx;
+  margin: 20px 30px 0 30px;
 }
 
 nav ul {
@@ -41,12 +40,12 @@ a {
 }
 
 .para {
-  font-size: 70px;
+  font-size: 79px;
 }
 
 .row {
   display: flex;
-  margin-top: 200px;
+  margin: 200px 0 0 20px;
 }
 
 .column1 {
@@ -58,7 +57,9 @@ a {
   position: static;
   display: flex;
   flex: 50%;
-  margin-left: 700px;
+  margin-left: 240px;
+  width: 250px;
+  height: 250px;
 }
 
 p {
