--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,25 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Times New Roman", Times, serif;
+  background-color: rgb(233, 227, 227);
 }
 
 .navbar {
   position: relative;
   display: flex;
   text-decoration: none;
-  border: solid 2px black;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
   padding: 14px 0;
   margin: 20px 30px 0 30px;
+  text-transform: uppercase;
+  background-color: white;
 }
 
 nav ul {
   list-style: none;
   display: flex;
   position: absolute;
-  padding-left: 900px;
+  padding-left: 600px;
 }
 
 nav ul li {
@@ -32,6 +35,7 @@ a {
 
 #logo {
   margin-top: 15px;
+  font-weight: bolder;
   font-size: x-large;
   margin-left: 20px;
 }
